crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__model_popup_tests__popup_model_many.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
> ollama/llama3.2 Ollama - Llama 3.2                                            
  ollama/llama3.1 Ollama - Llama 3.1                                            
  ollama/qwen2.5-coder:32b Ollama - Qwen 2.5 Coder 32B                          
  ollama/qwen2.5-coder:14b Ollama - Qwen 2.5 Coder 14B                          
  ollama/deepseek-r1:32b Ollama - DeepSeek R1 32B ↓                             
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
