crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__model_popup_tests__popup_model_second.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ollama/llama3.2 Ollama - Llama 3.2                                            
> ollama/qwen2.5-coder:32b Ollama - Qwen 2.5 Coder 32B                          
  openai/gpt-4o OpenAI - GPT-4o                                                 
  anthropic/claude-sonnet-4 Anthropic - Claude Sonnet 4                         
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
